--- a/web/src/app/release-date/page.module.css
+++ b/web/src/app/release-date/page.module.css
@@ -1,6 +1,8 @@
 .main {
   height: 100%;
   flex: 1;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
